Added i2c example